--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bluebird": "^2.9.6",
     "koa": "^0.18.0",
     "koa-bodyparser": "^1.4.1",
-    "koa-router": "^4.2.0",
+    "koa-router": "^4.2.0"
   },
   "devDependencies": {
   }
